--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,170 +1,230 @@
-/* //////////// Navbar */
-topbar-parent {
-  background-color: var(--topbar-bg);
+img {
+  height: 100%;
+  width: 100%;
+}
+.about,
+.about-header {
+  background-image: url("/src/assets/aboutimages/aboutheader.png");
+  /* height: 50vh; */
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 2px solid red;
 }
 
-.topbar-content {
-  width: 87%;
+.about,
+.about-header-content {
+  display: flex;
+  align-items: start;
+  height: 50vh;
+  flex-direction: column;
+  justify-content: center;
+  width: 85%;
+  margin: auto;
 }
-
-.logo-set,
-.logo-set * {
-  box-sizing: border-box;
-}
-.logo-set {
-  flex-shrink: 0;
-  width: 100.01px;
-  height: 56px;
-  position: relative;
-  overflow: hidden;
-}
-.group {
-  height: auto;
-  position: absolute;
-  right: 13.78%;
-  left: 53.42%;
-  width: 32.8%;
-  bottom: 60.68%;
-  top: 20.86%;
-  height: 18.45%;
-  overflow: visible;
-}
-.group2 {
-  height: auto;
-  position: absolute;
-  right: 10.12%;
-  left: 66.79%;
-  width: 23.08%;
-  bottom: 38.85%;
-  top: 42.73%;
-  height: 18.42%;
-  overflow: visible;
-}
-.vector7 {
-  height: auto;
-  position: absolute;
-  right: 37.73%;
-  left: 54%;
-  width: 8.26%;
-  bottom: 17.55%;
-  top: 64.03%;
-  height: 18.42%;
-  overflow: visible;
-}
-.vector8 {
-  height: auto;
-  position: absolute;
-  right: 33.76%;
-  left: 63.35%;
-  width: 2.89%;
-  bottom: 17.55%;
-  top: 64.04%;
-  height: 18.42%;
-  overflow: visible;
-}
-.vector9 {
-  height: auto;
-  position: absolute;
-  right: 23.21%;
-  left: 66.92%;
-  width: 9.88%;
-  bottom: 17.53%;
-  top: 64.02%;
-  height: 18.44%;
-  overflow: visible;
-}
-.vector10 {
-  height: auto;
-  position: absolute;
-  right: 40.22%;
-  left: 15.68%;
-  width: 44.1%;
-  bottom: 44.49%;
-  top: 20.6%;
-  height: 34.91%;
-  overflow: visible;
-}
-.vector11 {
-  height: auto;
-  position: absolute;
-  right: 42.18%;
-  left: 11.9%;
-  width: 45.92%;
-  bottom: 18.36%;
-  top: 61.45%;
-  height: 20.18%;
-  overflow: visible;
-}
-.vector12 {
-  height: auto;
-  position: absolute;
-  right: 33.24%;
-  left: 45.91%;
-  width: 20.85%;
-  bottom: 36.26%;
-  top: 37.57%;
-  height: 26.16%;
-  overflow: visible;
-}
-.vector13 {
-  height: auto;
-  position: absolute;
-  right: 64.04%;
-  left: 27.88%;
-  width: 8.09%;
-  bottom: 10.16%;
-  top: 81.63%;
-  height: 8.2%;
-  overflow: visible;
-}
-.vector14 {
-  height: auto;
-  position: absolute;
-  right: 30.26%;
-  left: 65.17%;
-  width: 4.57%;
-  bottom: 42.31%;
-  top: 48.91%;
-  height: 8.78%;
-  overflow: visible;
-}
-.vector15 {
-  height: auto;
-  position: absolute;
-  right: 42.8%;
-  left: 52.84%;
-  width: 4.36%;
-  bottom: 53.73%;
-  top: 38.05%;
-  height: 8.22%;
-  overflow: visible;
-}
-.nav-link {
-  color: var(--Gray-500, #667085);
-  font-family: "KacstOne", "sans-serif";
-  font-size: 14px;
+.about,
+.about-header-content p:nth-child(1) {
+  color: var(--White, #fff);
+  /* Display lg/Bold */
+  font-family: "KacstOne", "sens-serif";
+  font-size: 48px;
   font-style: normal;
   font-weight: 700;
-  line-height: 20px; /* 142.857% */
-  /* border: 2px solid red; */
-  margin: 0 10px;
+  line-height: 60px; /* 125% */
+  letter-spacing: -0.96px;
 }
-.form {
-  /* border: 2px solid red; */
-  width: 600px;
-  border-radius: 10px;
-  background: #f0f0f0;
-}
-form input:focus {
-  outline: none;
-}
-.form-control {
-  background: #f0f0f0 !important;
+.about,
+.about-header-content p:nth-child(2) {
+  color: var(--Gray-200, #eaecf0);
+  font-family: "KacstOne";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
 }
 
-@media only screen and (max-width: 1201px) {
-  .form {
-    width: 300px;
-    border-radius: 10px;
-  }
+/* /////////// Header Bottom */
+
+.about .header-bottom {
+}
+.about .header-bottom-content {
+  width: 85%;
+  margin: auto;
+  color: var(--Gray-200, #000);
+  padding: 100px 0;
+}
+
+/* <!-- // ==============================||About  Second Section ||============================== // --> */
+
+.about .about-2ndSection {
+  background: var(--Primary-25, #f5f2f0);
+  padding: 100px 0;
+}
+.about .about-2ndSection-parent {
+  width: 80%;
+  margin: auto;
+
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+
+  justify-content: space-around;
+}
+.about-2ndSection-img {
+  height: 500px;
+  width: 300px;
+}
+.about-2ndSection-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.about .about-2ndSection-content {
+  color: var(--Primary-800, #1e1a15);
+  font-family: "KacstOne";
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 38px; /* 126.667% */
+
+  margin: auto;
+}
+.about .about-2ndSection-number p:nth-child(1) {
+  color: var(--Primary-600, #5a4d3f);
+  font-family: "Palatino";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 72px; /* 120% */
+  letter-spacing: -1.2px;
+}
+.about .about-2ndSection-number p:nth-child(2) {
+  color: var(--Gray-900, #101828);
+
+  /* Text lg/Medium */
+  font-family: "KacstOne";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 155.556% */
+}
+/* <!-- // ==============================||About  Second Section End||============================== // --> */
+
+.about-card-parent {
+  background-color: #fff;
+}
+.about .about-cards {
+  width: 85%;
+  margin: auto;
+  background-color: #fff;
+  border-radius: 8px;
+  background: var(--Gray-200, #eaecf0);
+  padding: 50px;
+  /* height: 50%; */
+}
+
+.about .about-card-item {
+  border-radius: 8px;
+  background: var(--White, #fff);
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+  padding: 20px 20px;
+}
+.about .about-card-img {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 73px;
+  opacity: 0.15;
+  background: var(--Primary-400, #f2f0ed);
+  /* background-color: #ab9987; */
+  /* z-index: -1; */
+}
+.about .about-card-img img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  /* background-color: #ab9987; */
+}
+
+.about-cards-bottom {
+  width: 85%;
+  margin: auto;
+}
+.about .about-card-item p:nth-child(2) {
+  color: #292930;
+
+  font-family: "KacstOne";
+  font-size: 24px;
+
+  font-weight: 700;
+  line-height: 32px;
+}
+.about .about-card-item p:nth-child(3) {
+  color: var(--Gray-500, #667085);
+  text-align: right;
+
+  /* Text lg/Regular */
+  font-family: "KacstOne";
+  font-size: 18px;
+
+  font-weight: 400;
+  line-height: 28px; /* 155.556% */
+}
+/* //////////////// About Card Bottom */
+.about .about-cards-bottom {
+  margin-top: 100px;
+}
+.about .about-card-bottom-items p:nth-child(1) {
+  color: var(--Primary-800, #1e1a15);
+
+  /* Display sm/Bold */
+  font-family: KacstOne;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 25px; /* 126.667% */
+}
+.about .about-card-bottom-items p:nth-child(2) {
+  color: var(--Gray-500, #667085);
+
+  font-family: "KacstOne";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 155.556% */
+}
+.about .about-card-bottom-items button {
+  border-radius: 12.009px;
+  border: 1.501px solid var(--Primary-400, #ab9987);
+  background: var(--Primary-400, #ab9987);
+  box-shadow: 0px 1.501px 3.002px 0px rgba(16, 24, 40, 0.05);
+  padding: 10px 4px;
+  color: var(--White, #fff);
+  font-family: "KacstOne";
+  font-size: 24.019px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 33.026px; /* 137.5% */
+}
+.ellipse-11 {
+  background: var(--primary-200, #d1c7bd);
+  border-radius: 50%;
+  width: 50.42px;
+  height: 50.85px;
+  position: relative;
+}
+._1 {
+  color: var(--primary-700, #3c332a);
+  text-align: center;
+  font-family: var(--displaysm-bold-font-family, "KacstOne-Bold", sans-serif);
+  font-size: var(--displaysm-bold-font-size, 20px);
+  line-height: var(--displaysm-bold-line-height, 38px);
+  font-weight: var(--displaysm-bold-font-weight, 700);
+  /* position: relative; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
